[package]
name = "nf-adapter"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
version = "4.50.38"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }

# polkadot dependencies
polkadot-primitives = { path = "../../polkadot/primitives", default-features = false }
xcm = { path = "../../polkadot/xcm", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../polkadot/xcm/xcm-builder", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../polkadot/xcm/xcm-executor", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-primitives/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]

